# qbit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  allocator.cpp  allocator.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  block.cpp  block.h  blockcontext.cpp  blockcontext.h  consensus.h  consensusmanager.cpp  consensusmanager.h  containers.h  context.cpp  context.h  entity.h  exception.h  fs.cpp  fs.h  hash.cpp  hash.h  httpconnection.cpp  httpconnection.h  httpconnectionmanager.cpp  httpconnectionmanager.h  httpendpoints.cpp  httpendpoints.h  httpheader.h  httpreply.cpp  httpreply.h  httprequest.h  httprequesthandler.cpp  httprequesthandler.h  httprequestparser.cpp  (+87 more)
boost/: b2  project-config.jam  project-config.jam.2  project-config.jam.3
client/: commands.cpp  commands.h  commandshandler.cpp  commandshandler.h  handlers.h  icommand.h  lightcomposer.h  main.cpp  settings.h
client/dapps/buzzer/: buzzercommands.cpp  buzzercommands.h  buzzercomposer.cpp  buzzercomposer.h  buzzerrequestprocessor.h  commands.cpp  commands.h  composer.cpp  composer.h  requestprocessor.h
client/dapps/cubix/: commands.cpp  commands.h  composer.cpp  composer.h  cubixcommands.cpp  cubixcommands.h  cubixcomposer.cpp  cubixcomposer.h
compat/: endian.h
crypto/: aes.cpp  aes.h  common.h  ripemd160.cpp  ripemd160.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
dapps/buzz/: README.md
dapps/buzzer/: README.md  buzzer.cpp  buzzer.h  buzzfeed.cpp  buzzfeed.h  buzzfeedview.h  composer.cpp  composer.h  consensus.h  conversationsfeed.cpp  conversationsfeed.h  conversationsfeedview.h  eventsfeed.cpp  eventsfeed.h  eventsfeedview.h  handlers.h  httpendpoints.cpp  httpendpoints.h  peerextension.cpp  peerextension.h  transactionactions.cpp  transactionactions.h  transactionstoreextension.cpp  transactionstoreextension.h  txbuzz.h  txbuzzer.h  txbuzzeracceptconversation.h  txbuzzerblock.h  txbuzzerconversation.h  txbuzzerdeclineconversation.h  txbuzzerendorse.h  txbuzzergroup.h  txbuzzergroupinfo.h  txbuzzergroupinvite.h  txbuzzergroupinviteaccept.h  txbuzzergroupinvitedecline.h  txbuzzergroupkeys.h  txbuzzerhide.h  txbuzzerinfo.h  txbuzzermessage.h  (+14 more)
dapps/buzzer/qasm/: buzzer.qasm  dapp.qasm  shard.qasm
dapps/cubix/: consensus.h  cubix.h  peerextension.h  txmediadata.h  txmediaheader.h  txmediasummary.h  validator.h
db/: containers.h  db.h  leveldb.cpp  leveldb.h
deploy/linux/: add-to-sysctl.conf  ipv4v6tables.sh
deploy/linux/release/: buzzer.sh  qbit.config
doc/: instant_swap.md
hash/: bitmap.hpp  compress.hpp  cuckatoo.cpp  cuckatoo.h  cuckoo.cpp  cuckoo.h  graph.hpp  lean.cpp  lean.hpp
hash/crypto/: siphash.hpp  siphashxN.h
helpers/: cleanse.cpp  cleanse.h  secure.h  zeroafterfree.h
jm/: .gitignore  CMakeLists.txt  README.md  jm_allocator.c  jm_backend.c  jm_mutex.c  jm_utils.c
jm/include/: jet_malloc.h  jet_malloc_defs.h  jm_allocator.h  jm_backend.h  jm_mutex.h  jm_utils.h
jm/tests/: jet_malloc_tests.cpp
jm/windows/: jet_malloc.cpp  jet_malloc.sln  jet_malloc.vcxproj
leveldb/: CMakeLists.txt
leveldb/db/: version_set.cc  version_set.h
leveldb/include/leveldb/: options.h
leveldb/util/: env_posix.cc
log/: log.cpp  log.h
qt/app/: androidshareutils.cpp  androidshareutils.h  application.cpp  application.h  applicationpath.cpp  applicationpath.h  asiodispatcher.cpp  audiorecorder.cpp  audiorecorder.h  buzzer-app.config  buzzer-app.pro  buzzer-daemon.pro  buzzer-desktop-app.pro  buzzer-desktop.pro  buzzer.desktop  buzzer.pro  buzzfeedlistmodel.cpp  buzzfeedlistmodel.h  buzztexthighlighter.cpp  buzztexthighlighter.h  cameracontroler.cpp  cameracontroler.h  client.cpp  client.h  commandwrappers.cpp  commandwrappers.h  conversationsfeedlistmodel.cpp  conversationsfeedlistmodel.h  daemon-main.cpp  docviewcontroller.h  emojidata.cpp  emojidata.h  emojimodel.cpp  emojimodel.h  eventsfeedlistmodel.cpp  eventsfeedlistmodel.h  iapplication.h  iclient.h  imagelisting.cpp  imagelisting.h  (+35 more)
qt/app/android/: AndroidManifest.xml  build.gradle  buzzer-app.config
qt/app/boost/: build-boost-for-android-64.sh  build-boost-for-android.sh  build-boost-for-ios.sh
qt/app/components/: QuarkAddressBox.qml  QuarkBusyIndicator.qml  QuarkButton.qml  QuarkComboBox.qml  QuarkEditBox.qml  QuarkElevationEffect.qml  QuarkEmojiPopup.qml  QuarkEmojiTable.qml  QuarkFavoriteButton.qml  QuarkFooterBar.qml  QuarkHLine.qml  QuarkInfoBox.qml  QuarkLabel.qml  QuarkLabelRegular.qml  QuarkListView.qml  QuarkNumberEdit.qml  QuarkNumberLabel.qml  QuarkPage.qml  (+24 more)
qt/fonts/: Fonts.qml  qmldir
qt/fonts-all/: Fonts.qml
qt/mobile/: application.cpp  application.h  applicationpath.cpp  asiodispatcher.h  buzzer-app.config  buzzer-app.pro  buzzer-daemon.pro  buzzer.pro  buzzfeedlistmodel.cpp  buzzfeedlistmodel.h  buzztexthighlighter.cpp  buzztexthighlighter.h  client.cpp  client.h  commandwrappers.cpp  commandwrappers.h  conversationsfeedlistmodel.cpp  conversationsfeedlistmodel.h  daemon-main.cpp  error.h  eventsfeedlistmodel.cpp  eventsfeedlistmodel.h  iapplication.h  iclient.h  imagelisting.cpp  main.cpp  peerslistmodel.cpp  peerslistmodel.h  roundframe.h  settings.cpp  settings.h  wakelock.h  wallettransactionslistmodel.cpp  wallettransactionslistmodel.h  websourceinfo.cpp  websourceinfo.h
qt/qr/: QZXing.pri
rapidjson/: allocators.h  document.h  pointer.h
rapidjson/msinttypes/: inttypes.h  stdint.h
secp256k1/: .gitignore
secp256k1/include/: secp256k1_musig.h  secp256k1_schnorrsig.h
secp256k1/src/: libsecp256k1-config-client.h
tests/: assets.cpp  assets.h  blocks.cpp  blocks.h  buzzer_test_publish_buzz.sh  cuckoo.cpp  cuckoo.h  dbs.cpp  dbs.h  hash.cpp  hash.h  httpserver.cpp  httpserver.h  keys.cpp  keys.h  memorypool.cpp  memorypool.h  pow.cpp  pow.h  server.cpp  server.h  testsuit.cpp  transactions.cpp  transactions.h  transactionstore.cpp  transactionstore.h  unittest.cpp  unittest.h  vm.cpp  vm.h  wallet.cpp  wallet.h
vm/: asm.h  asset_type.qasm  coinbase.qasm  put_order.qasm  qasm.cpp  qasm.h  refund_order.qasm  spend.qasm  spend_private.qasm  trade.qasm  vm.cpp  vm.h
(+270 files in other folders)
